# demo

./: .gitattributes  .gitignore  .ignore  CMakeLists.txt  README.md
.clangd/index/: _fixes.hpp.AD3621B8D23F7F13.idx  _vectorize.hpp.D3617E290E1162B1.idx  bitmask.cpp.EEB1CE9F2D705D3F.idx  bitmask.hpp.3F9307129B59780F.idx  common.h.24E0D8AC79367608.idx  common.hpp.2C39DE83D7D53449.idx  compute_common.hpp.31BF1D5E1F9B29A6.idx  compute_vector_relational.hpp.1A733331579F5BCF.idx  constants.hpp.FD2A6BBB7729906E.idx  constants.inl.EE49D0B4DB6481C0.idx  engine.cpp.3A9A275EF0212B23.idx  engine.hpp.349D579C53B3BF07.idx  epsilon.hpp.01A4D14595095472.idx  epsilon.inl.5CACD70000100703.idx  exponential.h.B64119AB3EB9CD78.idx  exponential.hpp.FCAB7545749A0578.idx  float2.hpp.3113FF8B95F92004.idx  func_common.inl.9B592645382BCFA4.idx  func_common_simd.inl.D74B4BC8B23983A6.idx  func_exponential.inl.BEA342E2FE9C5BE0.idx  func_exponential_simd.inl.F143096942550415.idx  func_geometric.inl.2C86D812EEB4F087.idx  func_geometric_simd.inl.7FFD1BCEB94F7D94.idx  func_integer.inl.10F187D69572BD2C.idx  func_integer_simd.inl.3EF359FD99365F7C.idx  func_matrix.inl.31F96805661BE65D.idx  func_matrix_simd.inl.48545A34C6B48FA6.idx  func_packing.inl.BB723BA71B89BBC5.idx  func_packing_simd.inl.98B2F3D2FA545255.idx  func_trigonometric.inl.0DC63D5DB8882A32.idx  func_trigonometric_simd.inl.D142626792F5B765.idx  func_vector_relational.inl.2E24D3E0346F8002.idx  func_vector_relational_simd.inl.2E81687A392C83FD.idx  fwd.hpp.E6C544B436B88F27.idx  geometric.h.E8962EE87316F4AF.idx  geometric.hpp.4659C4D0475A6698.idx  glad.c.EC276F62FD53E49A.idx  glad.h.B62C11B1ADF114A2.idx  glfw3.h.9D28C9349E6E5D68.idx  glm.hpp.7BD87518B38FAEFF.idx  (+177 more)
assets/models/: cube.glb  fountain.fbx  fox.glb  fox_version_1.fbx  fox_version_2.fbx  sponza.blend  sponza.glb  sponza_2.glb  sponza_arches.fbx  sponza_flowers_bits.gltf  sponza_fountains.fbx  sponza_lion.fbx  sponza_with_lights.fbx  sponza_with_lights.glb
assets/shaders/: deferred_lighting_shader.frag  deferred_rendering_shader.frag  deferred_shader.frag  lamp_shader.frag  lamp_shader.vert  lighting_shader.frag  pixel.frag  simple_shader.frag  simple_shader.vert  uv_test_shader.frag
cmake/: Makefile  compile_commands.json  demo
foo/: CMakeCache.txt  assets  cmake_install.cmake
include/assimp/: config.h  config.h.in
include/demo/: bitmask.hpp  camera.h  camera.hpp  cube_map.hpp  engine.h  engine.hpp  filesystem.hpp  float2.hpp  keys.hpp  (+7 more)
src/: bitmask.cpp  camera.cpp  cube_map.cpp  engine.cpp  engine.h  input_processor.cpp  input_processor.h  main.cpp  texture.cpp  window.cpp  window.h  wren.c
(+225 files in other folders)
